objects/LLC_BI__Strategy__c.object
<CustomObject>
    <description>This object contains pricing strategies that apply to a set of products.</description>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>Users populate this field with a description of the strategy.</description>
        <inlineHelpText>Enter a description of this strategy.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__End_Date__c</fullName>
        <description>Users populate this required field with the date on which this pricing strategy becomes inactive. If there are no active strategies for the selected products, the system continues to use the most recent inactive strategy until a strategy becomes active.</description>
        <inlineHelpText>Enter the date on which this pricing strategy becomes inactive.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_Date__c</fullName>
        <description>Users populate this required field with the date on which this pricing strategy becomes active. If there is an active strategy for the selected products, the system automatically populates this field with the end date of the active strategy.</description>
        <inlineHelpText>Enter the date on which this pricing strategy becomes active. If an active strategy exists for the selected products, you must use the end date of the active strategy.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>Users populate this required picklist with the status of a pricing strategy. By default, the value is Draft.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Strategy_Type__c</fullName>
        <description>The user populates this required picklist to set the type of strategy. The system uses this field to determine the appropriate matrix builder workflow.</description>
        <inlineHelpText>Select the type of strategy you wish to create.</inlineHelpText>
        <label>Strategy Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Affordability</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pricing</label>
    <listViews>
        <fullName>LLC_BI__Pricing</fullName>
        <filterScope>Everything</filterScope>
        <label>Pricing</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>